Closed Bug 16725 Opened 25 years ago Closed 25 years ago

Align attribute not working for IFRAME attribute

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: chrispetersen, Assigned: pollmann)

Details

Attachments

(5 files)

Build: Apprunner
Version: 1999101812
Platforms: All
Expected results: The Align attribute should be used by the IFRAME element.
What I got: The IFRAME element is not using the assigned align values like
middle, top, bottom, left, and right.

Steps to reproduce:

1) Launch apprunner.
2) Open one of the five tests cases attached such as iframe align middle
3) The iframe element doesn't middle align it's self to the sentence
Assignee: rickg → troy
Troy -- is this yours or kipps? Please reassign.
Assignee: troy → pollmann
Eric, I think this is you
Status: NEW → ASSIGNED
Target Milestone: M11
Just fixed this in my local tree, I'll check it in as soon as review'd an tree
is opened.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Checked the fix in.
Status: RESOLVED → VERIFIED
Fixed on the Oct 22 builds (Mac, Win32, Linux).
SPAM. HTML Element component deprecated, changing component to Layout. See bug
88132 for details.
Component: HTML Element → Layout
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: