Bug 16725: Enable align attribute for iframe; r=harishd